[gd_scene load_steps=9 format=3 uid="uid://dug2vk07q0fjm"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_hb7rr"]
[ext_resource type="Theme" uid="uid://1bk43dvjwq68" path="res://ui/theme.tres" id="2_obr4f"]
[ext_resource type="Script" path="res://ui/grab_focus_on_ready.gd" id="3_e2dsu"]
[ext_resource type="PackedScene" uid="uid://dq0i6jmkv0gda" path="res://actors/player/player_sprite.tscn" id="3_eflpf"]
[ext_resource type="PackedScene" uid="uid://cmmfoj016di3a" path="res://environment/brick.tscn" id="4_dl2qf"]
[ext_resource type="Texture2D" uid="uid://dfvxayan3fhtq" path="res://environment/brick.png" id="5_nit0q"]

[sub_resource type="Animation" id="Animation_o54xj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Brick:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Brick:texture_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:texture_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wuoi8"]
resource_name = "scroll"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Brick:texture_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1024, 0), Vector2(-1024, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:texture_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(512, 0), Vector2(-512, 0)]
}

[node name="MainMenu" type="Node"]
script = ExtResource( "1_hb7rr" )

[node name="Pause" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "2_obr4f" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Pause/Control"]
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.45
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Pause/Control/PanelContainer"]
offset_right = 709.0
offset_bottom = 778.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_left = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Control/PanelContainer/MarginContainer"]
offset_left = 30.0
offset_top = 30.0
offset_right = 679.0
offset_bottom = 748.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Pause/Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 649.0
offset_bottom = 382.0
theme_override_font_sizes/font_size = 128
text = "Bubble Gum
Archeologist"

[node name="ButtonStart" type="Button" parent="Pause/Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 397.0
offset_right = 649.0
offset_bottom = 494.0
text = "Play!"
script = ExtResource( "3_e2dsu" )

[node name="ButtonReset" type="Button" parent="Pause/Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 509.0
offset_right = 649.0
offset_bottom = 606.0
text = "Reset Save"

[node name="ButtonQuit" type="Button" parent="Pause/Control/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 621.0
offset_right = 649.0
offset_bottom = 718.0
text = "Quit"

[node name="Node2D" type="Node2D" parent="."]

[node name="PlayerSprite" parent="Node2D" instance=ExtResource( "3_eflpf" )]
position = Vector2(1546, 688)
rotation = 3.14159
scale = Vector2(1, -1)
has_sound = false

[node name="AnimationPlayer" parent="Node2D/PlayerSprite" index="1"]
autoplay = "walk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
autoplay = "scroll"
anims/RESET = SubResource( "Animation_o54xj" )
anims/scroll = SubResource( "Animation_wuoi8" )

[node name="Brick" parent="Node2D" instance=ExtResource( "4_dl2qf" )]
position = Vector2(14, 902)
texture_scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-90, -118, 2022, -118, 2022, 522, -98, 522)

[node name="Background" type="Polygon2D" parent="Node2D"]
texture_repeat = 2
position = Vector2(-21, 216)
z_index = -10
color = Color(0.368627, 0.34902, 0.290196, 1)
texture = ExtResource( "5_nit0q" )
texture_scale = Vector2(0.6, 0.6)
polygon = PackedVector2Array(-69, -252, 2050, -236, 2048, 776, -72, 768)

[connection signal="pressed" from="Pause/Control/PanelContainer/MarginContainer/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Pause/Control/PanelContainer/MarginContainer/VBoxContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Pause/Control/PanelContainer/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]

[editable path="Node2D/PlayerSprite"]
